--- a/app_blog/templates/app_blog/post_list.html
+++ b/app_blog/templates/app_blog/post_list.html
@@ -1,1 +1,21 @@
-<h1>Página Post</h1>
+{% extends "base.html" %}
+
+{% load static %}
+
+{% block title%}Lista de Posts{% endblock %}
+
+{% block content %}
+<h1 class="mb-4">Último Post</h1>
+{% for post in posts %}
+    <div class="card mb-3">
+        <div class="card-body">
+            <h4 class="card-title">{{ post.tilte }}</h4>
+            <h6 class="card-subtitle mb-2 text-muted">por {{ post.author }} em {{ post.published_date|date:"d/m/Y H:i" }}</h6>
+            <p class="card-text">{{ post.text|truncatewords:30 }}</p>
+            <a href="#" class="btn btn-primary">Leia mais</a>
+        </div>
+    </div>
+{% empty %}
+    <p>Nenhuma post publicado ainda.</p>
+{% endfor %}
+{% endblock%}
