--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                             <a class="nav-link" href="#">{{ user.username }}</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Novo Post</a>
+                            <a class="nav-link" href="{% url 'post_new' %}">Novo Post</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Sair</a>
