feat: adicionando validação 'Se for edição (post existe), vai para o post ou Se for novo (post ainda não existe), volta para a lista de posts.'

--- a/app_blog/templates/app_blog/post_edit.html
+++ b/app_blog/templates/app_blog/post_edit.html
@@ -25,6 +25,10 @@
     </div>
 
     <button type="submit" class="btn btn-success">Salvar</button>
-    <a href="{% url 'post_detail' post.pk %}" class="btn btn-secondary">Cancelar</a>
+    {% if post %}
+        <a href="{% url 'post_detail' post.pk %}" class="btn btn-secondary">Cancelar</a>
+    {% else %}
+        <a href="{% url 'post_list' %}" class="btn btn-secondary">Cancelar</a>
+    {% endif %}
 </form>
 {% endblock %}
