feat: Adicionando link para painel_administrativo

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,11 +38,16 @@
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">{{ user.username }}</a>
+                            <a class="nav-link" href="#">Usuário: {{ user.username }}</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'post_new' %}">Novo Post</a>
                         </li>
+                        {% if user.is_staff %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'painel_administrativo' %}">Admin Blog</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="#">Sair</a>
                         </li>
