--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     {% block extra_head %}{% endblock %}
 
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -67,22 +67,25 @@
     </nav>
 
     <!--Conteúdo principal para as templates-->
-    <main class="container">
+    <main class="container flex-grow-1 my-4">
         {% block content %}
         <!-- Conteúdo das páginas vai aqui -->
         {% endblock %}
     </main>
 
     <!-- Rodapé -->
-    <footer class="bg-light">
-        <div class="container">
-            <p class="text-muted">© {{ year|default:"2025" }} - Meu Blog Simples</p>
+    <footer class="bg-light py-3 mt-auto">
+        <div class="container text-center">
+            <p class="text-muted mb-0">© {{ year|default:"2025" }} - Meu Blog Simples</p>
         </div>
     </footer>
 
     <!-- Bootstrap JS (CDN) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    {% block extra_js %}{% endblock %}
+    {% block extra_js %}
+    
+    
+    {% endblock %}
     
 </body>
 </html>
