--- a/app_blog/templates/app_blog/post_list.html
+++ b/app_blog/templates/app_blog/post_list.html
@@ -17,20 +17,35 @@
 
 {% if posts %}
     {% for post in posts %}
-        <div class="card mb-3">
-            <div class="card-body">
-                <h4 class="card-title">{{ post.title }}</h4>
-                <h6 class="card-subtitle mb-2 text-muted">
-                    por {{ post.author }} em {{ post.published_date|date:"d/m/Y H:i" }}
-                </h6>
-                <p class="card-text">{{ post.text|truncatewords:30 }}</p>
+        <div class="card mb-4">
+            <div class="row g-0">
+                <!-- Coluna da imagem -->
+                <div class="col-md-4">
+                    {% if post.image and post.image.url %}
+                        <img src="{{ post.image.url }}" class="img-fluid rounded-start" alt="Imagem do post" style="height:100%; object-fit:cover;">
+                    {% else %}
+                        <img src="{% static 'images/default.png' %}" class="img-fluid rounded-start" alt="Imagem padrão" style="height:100%; object-fit:cover;">
+                    {% endif %}
+                </div>
 
-                <!-- Contador de likes/dislikes -->
-                <p class="card-text">
-                    👍 {{ post.likes }} | 👎 {{ post.dislikes }}
-                </p>
-                
-                <a href="{% url 'post_detail' post.pk %}" class="btn btn-primary">Leia mais</a> 
+                <!-- Coluna do conteúdo -->
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h4 class="card-title">{{ post.title }}</h4>
+                        <h6 class="card-subtitle mb-2 text-muted">
+                            por {{ post.author }} em {{ post.published_date|date:"d/m/Y H:i" }}
+                        </h6>
+
+                        <p class="card-text">{{ post.text|truncatewords:30 }}</p>
+
+                        <!-- Contador de likes/dislikes -->
+                        <p class="card-text">
+                            👍 {{ post.likes }} | 👎 {{ post.dislikes }}
+                        </p>
+                        
+                        <a href="{% url 'post_detail' post.pk %}" class="btn btn-primary">Leia mais</a> 
+                    </div>
+                </div>
             </div>
         </div>
     {% empty %}
