--- a/app_blog/templates/app_blog/post_new.html
+++ b/app_blog/templates/app_blog/post_new.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <h2 class="mb-4">Novo Post</h2>
-<form method="post" novalidate>
+<form method="post"  enctype="multipart/form-data" novalidate>
     {% csrf_token %}
     
     <div class="mb-3">
@@ -23,6 +23,15 @@
             <div class="text-danger">{{ form.text.errors }}</div>
         {% endif %}
     </div>
+
+    <div class="mb-3">
+        <label for="{{ form.image.id_for_label }}" class="form-label">Imagem</label>
+        {{ form.image }}
+        {% if form.image.errors %}
+            <div class="text-danger">{{ form.image.errors }}</div>
+        {% endif %}
+    </div>
+
 
     <button type="submit" class="btn btn-primary">Publicar</button>
     <a href="{% url 'post_list' %}" class="btn btn-secondary">Cancelar</a>
