--- a/app_blog/templates/app_blog/post_edit.html
+++ b/app_blog/templates/app_blog/post_edit.html
@@ -39,6 +39,15 @@
                 <img src="{{ post.image.url }}" alt="Imagem atual" style="max-width: 200px; height: auto;">
             </div>
         {% endif %}
+
+        <div class="mb-3">
+            <label for="{{ form.video_url.id_for_label }}" class="form-label">Vídeo do YouTube</label>
+            {{ form.video_url }}
+            {% if form.video_url.errors %}
+                <div class="text-danger">{{ form.video_url.errors }}</div>
+            {% endif %}
+        </div>
+        
     </div>
 
 
