feat: adição do video para visualização, melhorando leyout para ficar lado a lado com a imagem

--- a/app_blog/templates/app_blog/post_detail.html
+++ b/app_blog/templates/app_blog/post_detail.html
@@ -8,11 +8,26 @@
     <div class="mb-4">
         <h1 class="mb-3">{{ post.title }}</h1>
 
-        {% if post.image and post.image.url %}
-            <img src="{{ post.image.url }}" alt="Imagem do post" class="img-fluid mb-3 rounded" style="max-height: 400px; object-fit: cover;">
-        {% else %}
-            <img src="{% static 'images/default.png' %}" alt="Imagem do post" class="img-fluid mb-3 rounded" style="max-height: 400px; object-fit: cover;">
-        {% endif %}
+        <div class="row mb-4">
+            <div class="col-md-6">
+                {% if post.image and post.image.url %}
+                    <img src="{{ post.image.url }}" alt="Imagem do post" class="img-fluid rounded" style="height: 400px; object-fit: cover; width: 100%;">
+                {% else %}
+                    <img src="{% static 'images/default.png' %}" alt="Imagem padrão" class="img-fluid rounded" style="height: 400px; object-fit: cover; width: 100%;">
+                {% endif %}
+            </div>
+        
+            {% if post.video_url %}
+            <div class="col-md-6">
+              <div class="ratio ratio-16x9" style="height: 400px;">
+                <iframe src="{{ post.video_url }}" 
+                        title="YouTube video"
+                        allowfullscreen 
+                        style="width: 100%; height: 100%; border-radius: 8px; border: none;"></iframe>
+              </div>
+            </div>
+            {% endif %}
+        </div>
 
 
         <p class="text-muted">
