--- a/app_blog/templates/app_blog/post_list.html
+++ b/app_blog/templates/app_blog/post_list.html
@@ -13,7 +13,7 @@
     </div>
 </form>
 
-<h1 class="mb-4">Último Post</h1>
+<h1 class="mb-4">Últimos Posts</h1>
 
 {% if posts %}
     {% for post in posts %}
