--- a/app_blog/templates/app_blog/post_new.html
+++ b/app_blog/templates/app_blog/post_new.html
@@ -40,6 +40,14 @@
         {% endif %}
     </div>
 
+    <div class="mb-3">
+        <label for="{{ form.categoria.id_for_label }}" class="form-label">Categoria</label>
+        {{ form.categoria }}
+        {% if form.categoria.errors %}
+            <div class="text-danger">{{ form.categoria.errors }}</div>
+        {% endif %}
+    </div>
+
 
     <button type="submit" class="btn btn-primary">Publicar</button>
     <a href="{% url 'post_list' %}" class="btn btn-secondary">Cancelar</a>
