--- a/app_blog/templates/app_blog/post_edit.html
+++ b/app_blog/templates/app_blog/post_edit.html
@@ -55,6 +55,15 @@
                 <div class="text-danger">{{ form.categoria.errors }}</div>
             {% endif %}
         </div>
+
+        <div class="mb-3">
+            <label for="{{ form.tags.id_for_label }}" class="form-label">Tags</label>
+            {{ form.tags }}
+            <div class="form-text">Separe por vírgulas: exemplo, tutorial, django</div>
+            {% if form.tags.errors %}
+                <div class="text-danger">{{ form.tags.errors }}</div>
+            {% endif %}
+        </div>
         
     </div>
 
