atualizando requirements.txt

--- a/app_blog/templates/app_blog/post_detail.html
+++ b/app_blog/templates/app_blog/post_detail.html
@@ -45,6 +45,8 @@
         <a href="{% url 'post_list' %}" class="btn btn-secondary btn-sm">Voltar</a>
     </div>
 
+
+    <!--Votação-->
     <hr>
     <div id="votos">
         <button id="like-btn">Gostei 👍 (<span id="like-count">{{ post.likes }}</span>)</button>
