--- a/app_blog/templates/app_blog/post_detail.html
+++ b/app_blog/templates/app_blog/post_detail.html
@@ -36,6 +36,18 @@
         </p>
         <hr>
         <p class="fs-5">{{ post.text|linebreaks }}</p>
+
+        {% if post.tags.all %}
+        <div class="mt-3">
+            <strong>Tags:</strong>
+            {% for tag in post.tags.all %}
+                <a href="{% url 'posts_por_tag' tag.slug %}" class="badge bg-secondary text-decoration-none me-1">
+                    {{ tag.name }}
+                </a>
+            {% endfor %}
+        </div>
+        {% endif %}
+
     </div>
 
     <div class="d-flex gap-2">
